Remove auto overflow + fix tests.

--- a/premium/web-frontend/modules/baserow_premium/assets/scss/components/user_admin.scss
+++ b/premium/web-frontend/modules/baserow_premium/assets/scss/components/user_admin.scss
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  overflow: auto;
 }
 
 .user-admin-username__initials {
